--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-angular-filesort": "^1.1.1",
-    "gulp-inject": "^1.3.1"
+    "gulp-inject": "^1.3.1",
+    "gulp-jshint": "^1.11.2",
+    "gulp-livereload": "^3.8.0",
+    "jshint-stylish": "^2.0.1"
   }
 }
