--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/bryanlvenable/DnD-Space/issues"
   },
-  "homepage": "https://github.com/bryanlvenable/DnD-Space"
+  "homepage": "https://github.com/bryanlvenable/DnD-Space",
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-angular-filesort": "^1.1.1",
+    "gulp-inject": "^1.3.1",
+    "gulp-jshint": "^1.11.2",
+    "gulp-livereload": "^3.8.0",
+    "jshint-stylish": "^2.0.1"
+  }
 }
